# workflow-generator

./: .env.example  CURRENT_STATUS.md  FRONTEND_API_UPDATE.md  FRONTEND_UPDATES.md  ISSUES_FIXED_STATUS.md  PROJECT_COMPLETE.md  README.md  docker-compose.yml  pytest.ini  render.yaml  run_chat_tests.py  setup.sh  test_agent_integration.py  test_deployment.py  test_deployment.sh  test_integration.sh  test_render_deployment.sh
backend/: Dockerfile  main.py  pyproject.toml  pytest.ini  railway.toml  requirements.txt  run_tests.sh  test_email_automation.py  test_enhanced_workflow.py  test_web_scraping.py
backend/app/: __init__.py  main.py
backend/app/agents/: base_agent.py  workflow_builder.py  workflow_planner.py  workflow_tools.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: chat.py  visual_workflows.py  workflows.py
backend/app/core/: config.py  database.py  llm_config.py
backend/app/crud/: chat.py  workflow.py
backend/app/models/: chat.py  workflow.py  workflow_visual.py
backend/app/schemas/: workflow_agent_schemas.py
backend/app/services/: chat_agent.py  enhanced_workflow_executor.py  mock_email_service.py  node_registry.py  visual_workflow_executor.py  workflow_executor.py  workflow_generator.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_crud.py  test_models.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.js
notes/: ADVANCED_WORKFLOW_PLAN.md  AI_WORKFLOW_ARCHITECTURE.md  AI_WORKFLOW_STATUS_DEC2024.md  API_AND_AIML_SUMMARY.md  API_DOCUMENTATION.md  BACKEND_DEPLOYMENT_GUIDE.md  CHANGELOG_2025_08_23.md  CURRENT_SESSION_SUMMARY.md  CURRENT_STATUS.md  EMAIL_AUTOMATION_ENGINEERING.md  EMAIL_AUTOMATION_IMPLEMENTATION.md  EMAIL_AUTOMATION_PRODUCT.md  ENGINEERING_ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUCCESS.md  PRODUCT_REQUIREMENTS.md  PROJECT_COMPLETE.md  PROJECT_REFERENCE.md  QUICK_START.md  README_ENHANCED.md  RENDER_DEPLOYMENT_GUIDE.md  SESSION_COMPLETION_REPORT.md  SESSION_SUCCESS_REPORT.md
tests/: requirements.txt  seed_real_world_workflows.py  seed_workflows.py  setup_email_automation.py  setup_web_scraping.py  test_aiml_integration.py  test_api.py  test_api_comprehensive.py  test_api_status.py  test_backend_quick.py  test_chat_api.py  test_chat_api_integration.py  test_chat_crud.py  test_chat_e2e.py  (+5 more)
(+22 files in other folders)
